<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.assimbly</groupId>
    <artifactId>custom-components</artifactId>
    <packaging>pom</packaging>
    <name>custom-components</name>
    <url>https://www.org.assimbly</url>
    <version>5.1.0</version>

    <modules>
        <module>aggregate</module>
        <module>auth</module>
        <module>cookies</module>
        <module>csvtoxml</module>
        <module>docconverter</module>
        <module>edi</module>
        <module>edifact</module>
        <module>edifactcommon</module>
        <!--<module>edifactstandards</module>-->
        <module>encoder</module>
        <module>enrich</module>
        <module>exceltoxml</module>
        <module>flv</module>
        <module>formtoxml</module>
        <module>googledrive</module>
        <module>jsontoxmllegacy</module>
        <module>mail</module>
        <module>multipart</module>
        <module>oauth2token</module>
        <!--<module>oriflame</module>-->
        <module>pdf</module>
        <module>pdftotext</module>
        <module>replace</module>
        <!--<module>sandbox</module>-->
        <module>simplereplace</module>
        <module>smb</module>
        <module>smooksnoxml</module>
        <module>soap</module>
        <module>sql</module>
        <module>tenantvariables</module>
        <module>xmltocsv</module>
        <module>xmltoexcel</module>
        <module>xmltojson</module>
        <module>xmltojsonlegacy</module>
    </modules>

    <distributionManagement> 
        <repository>
            <id>github</id> 
            <name>Temporary Staging Repository</name> 
            <url>https://maven.pkg.github.com/assimbly/custom-components</url>
        </repository> 
    </distributionManagement>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.basedir>${project.basedir}</main.basedir>
        <maven.versions.rules>file:///${project.basedir}/rules.xml</maven.versions.rules>

        <angus.mail.version>2.0.5</angus.mail.version>
        <assimbly.version>5.1.0</assimbly.version>
        <bouncycastle.version>1.82</bouncycastle.version>
        <config-admin.version>1.9.26</config-admin.version>
        <cxf.version>4.1.4</cxf.version>
        <camel.version>4.16.0</camel.version>
        <docconverter.version>1.15.0</docconverter.version>
        <google.api.version>v3-rev20251114-2.0.0</google.api.version>
        <google.auth.version>1.5.0</google.auth.version>
        <google.oauth.version>1.39.0</google.oauth.version>
        <hibernate-core.version>6.6.36.Final</hibernate-core.version>
        <httpcomponents.version>4.5.14</httpcomponents.version>
        <jakarta.activation.version>2.1.4</jakarta.activation.version>
        <jaxen.version>2.0.0</jaxen.version>
        <jcifs.version>3.0.0</jcifs.version>
        <libsodium-jna.version>1.0.5</libsodium-jna.version>
        <mime4j.version>0.8.13</mime4j.version>
        <mockito-core.version>5.20.0</mockito-core.version>
        <mockito-inline.version>5.2.0</mockito-inline.version>
        <mongo.version>4.7.2</mongo.version>
        <mvel.version>2.5.2.Final</mvel.version>
        <pdfbox.version>3.0.6</pdfbox.version>
        <poi.version>5.5.0</poi.version>
        <saaj-impl.version>3.0.4</saaj-impl.version>
        <skyscreamer.version>1.5.3</skyscreamer.version>
        <smooks.version>1.7.1</smooks.version>
        <smooks-fragments.version>1.7.1.0</smooks-fragments.version>
        <slf4j.version>2.0.17</slf4j.version>
        <wsdl4j.version>1.6.3</wsdl4j.version>

    </properties>

    <dependencies>

        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>camel-base</artifactId>
            <version>${assimbly.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>common-base</artifactId>
            <version>${assimbly.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>utils</artifactId>
            <version>${assimbly.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assimbly</groupId>
            <artifactId>test-base</artifactId>
            <version>${assimbly.version}</version>
            <scope>test</scope>
        </dependency>

       <dependency>
            <groupId>org.apache.james</groupId>
            <artifactId>apache-mime4j-core</artifactId>
            <version>${mime4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient-osgi</artifactId>
            <version>${httpcomponents.version}</version>
        </dependency>

    </dependencies>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.16.2</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>dependency-updates-report</report>
                            <report>plugin-updates-report</report>
                            <report>property-updates-report</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.1</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>
                            <arg>-XDcompilePolicy=simple</arg>
                            <arg>--should-stop=ifError=FLOW</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.6.1</version>
                    <executions>
                        <execution>
                            <id>enforce-maven</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireMavenVersion>
                                        <version>[3.9.9,)</version>
                                    </requireMavenVersion>
                                    <requireJavaVersion>
                                        <version>21</version>
                                    </requireJavaVersion>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.9.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.21.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-toolchains-plugin</artifactId>
                    <version>3.2.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>toolchain</goal>
                            </goals>
                            <configuration>
                                <toolchains>
                                    <jdk>
                                        <version>21</version>
                                    </jdk>
                                </toolchains>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <rulesUri>${maven.versions.rules}</rulesUri>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
